# cyflow

./: .b_me  .gitignore  build.sh  dep.sh  extensions  out.comple  pyproject.toml  setup.py  todo.md
benchmark/: benchmark.py  result.md
src/csrc/core/: tensor.c  utils.c  utils_cuda.cu
src/csrc/cpu/: inline_op_cpu.c  out_op_cpu.c
src/csrc/cuda/: cuda_stubs.c  inline_op.cu  out_op_cuda.cu  tensor_cuda.cu
src/cyflow/: __init__.py  autograd.cpp  autograd.pxd  autograd.pyx  c_tensor.c  c_tensor.h  cuda_stubs.c  module.py  tensor.c  tensor.cpp  tensor.pxd  tensor.pyx
src/cyflow/core/: module.py
src/cyflow/cpu/: tensor_cpu.c
src/cyflow/cuda/: tensor_cuda.cu
src/cyflow/nn/: __init__.py  layers.py  losses.py  optim.py
src/include/cyflow/: commmon.h  common.h  inline_op_cpu.h  inline_op_cuda.h  out_op_cpu.h  out_op_cuda.h  tensor.h  tensor_cpu.h  tensor_cuda.h  utils.h
tests/: ignore_test_new.py  test_add_operation_cpu.py  test_tensor.py
tests/integration/: test_linear_training.py
tests/unit/: test_tensor_core.py
