[project]
name = "cyflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lewisnjue", email = "njue.prime@gmail.com" }]
dependencies = ["cython>=3.2.8", "pytest>=9.1.1", "setuptools>=83.0.0"]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
