[project]
name = "cyflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lewisnjue", email = "njue.prime@gmail.com" }]
dependencies = [
    "cython>=3.2.8",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pytest>=9.1.1",
    "setuptools>=83.0.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=9.1.1",
    "torch>=2.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
